2005-08-15  Richard B. Kreckel  <kreckel@ginac.de>

	* m4/cc.m4 (CL_AS_NOEXECSTACK): New macro...
	* configure.ac: ...used here for setting ASMFLAGS...
	* src/Makefile.in: ...which are used here.

2005-08-02  Andreas Jochens  <aj@andaco.de>

	* include/cln/config.h.in: Add support for PowerPC 64 CPU.
	* include/cln/modules.h: Likewise.
	* include/cln/object.h: Likewise.
	* include/cln/types.h: Likewise.

2005-07-24  Richard B. Kreckel  <kreckel@ginac.de>

	Make out of the box build on x86_64 system with complete 32 bit
	userland possible
	* include/cln/config.h.in: Don't #define __x86_64__ when
	__i386__ is defined.
	* src/base/digitseq/cl_asm_x86_64_.cc: New file.
	* doc/cln.tex: Revert workaround description introduced 2005-05-02.

2005-06-10  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* Makefile.in: Don't enter nonexisting directories.

2005-05-17  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Speed up the linking step
	* src/Makefile.in: Use -objectlist for linking libcln.la.

2005-05-15  Richard B. Kreckel  <kreckel@ginac.de>

	* autoconf/ltmain.sh: Upgrade to libtool-1.5.16.
	* m4/libtool.m4: Upgrade to libtool-1.5.16 (without Comeau patch).

2005-05-02  Richard B. Kreckel  <kreckel@ginac.de>

	* doc/cln.tex: Document what to do on a x86_64 machine with 32-bit
	userland.

2005-05-01  Richard B. Kreckel  <kreckel@ginac.de>

	Fix crashes in find_univpoly_ring and related functions
	* include/cln/modinteger.h: Remove vptr from cl_heap_modint_ring;
	remove declaration of cl_class cl_class_modint_ring.
	* include/cln/univpoly.h: Remove vptr from cl_heap_univpoly_ring;
	remove declaration of cl_class_univpoly_ring.
	* include/cln/object.h: cl_class_flags_modint_ring: New #define...
	* src/modinteger/cl_MI.cc: ...used in cl_class_modint_ring.
	* src/modinteger/cl_MI_fix16.h: No vptr, but static dtor and type flag.
	* src/modinteger/cl_MI_fix29.h: Likewise.
	* src/modinteger/cl_MI_fix32.h: Likewise.
	* src/modinteger/cl_MI_int32.h: Likewise.